# photon

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: get_started.md
.github/workflows/: ci.yml  pypi.yml  release.yml
crates/photon/: Cargo.toml
crates/photon-core/: Cargo.toml
crates/photon-core/benches/: pipeline.rs
crates/photon-core/src/: config.rs  error.rs  lib.rs  math.rs  output.rs  types.rs
crates/photon-core/src/config/: mod.rs  types.rs  validate.rs
crates/photon-core/src/embedding/: mod.rs  preprocess.rs  siglip.rs
crates/photon-core/src/llm/: anthropic.rs  enricher.rs  hyperbolic.rs  mod.rs  ollama.rs  openai.rs  provider.rs  retry.rs
crates/photon-core/src/pipeline/: channel.rs  decode.rs  discovery.rs  hash.rs  metadata.rs  mod.rs  processor.rs  thumbnail.rs  validate.rs
crates/photon-core/src/tagging/: hierarchy.rs  label_bank.rs  mod.rs  neighbors.rs  progressive.rs  relevance.rs  scorer.rs  seed.rs  text_encoder.rs  vocabulary.rs
crates/photon-core/tests/: integration.rs
crates/photon/src/: logging.rs  main.rs
crates/photon/src/cli/: config.rs  mod.rs  models.rs  process.rs
crates/photon/src/cli/interactive/: mod.rs  models.rs  process.rs  setup.rs  theme.rs
crates/photon/src/cli/process/: batch.rs  enrichment.rs  mod.rs  setup.rs  types.rs
data/vocabulary/: seed_terms.txt  supplemental.txt
docs/: blueprint.md  changelog.md  technical-overview.md  usage.md  vision.md
docs/archive/: assessment-correctness.md  assessment-review-fixes.md  assessment-structure.md  code-assessment-2026-02-13.md  code-assessment-h-series.md  code-assessment-phase-1.md  code-assessment-phase-3.md  code-assessment.md  final-cleanup.md  final-open-items.md  finish-testing.md  hardening-phase-1-tests.md  interactive-cli-hardening.md  interactive-cli-plan.md  interactive-cli.md  manual-codebase-assessment-130226.md  merged-assessment.md  pending-issues.md  phase-1-foundation.md  phase-10-polish.md  phase-2-image-pipeline.md  phase-3-main-menu.md  phase-3-siglip-embedding.md  phase-4-refactors.md  phase-4-text-encoder-spike.md  phase-4-zero-shot-tagging.md  phase-5-bug-fixes.md  phase-5-llm-integration.md  phase-5-post-fix-review.md  phase-6-polish-release.md  pre-phase-5-fixes.md  pre-push-cleanup.md  process-decomposition.md  quick-wins-assessment.md  speed-improvement-plan.md  speed-phase-1.md  speed-phase-2.md  speed-phase-3.md  speed-phase-4.md  speed-phase-5.md  (+3 more)
docs/completions/: assessment-review-fixes.md  assessment-structure.md  checksum-verification.md  code-assessment-phase-2.md  code-assessment-phase-4.md  code-polishing.md  hardening-phase-2-safety.md  hardening-phase-3-ux.md  hardening-phase-4-polish.md  high-severity-fixes.md  integration-tests.md  medium-severity-fixes.md  phase-1-foundation.md  phase-2-image-pipeline.md  phase-2-theme-banner.md  phase-4b-progressive-encoding.md  phase-4cd-relevance-pruning.md  phase-4e-hierarchy-dedup.md  phase-5-6-7-combined.md  phase-9-config-viewer.md  publishing-pypi.md  streaming-batch-output.md  task-5-enricher-tests.md
docs/executing/: code-assessment-fixes.md  finish-testing.md  interactive-cli-hardening.md  medium-severity-fixes.md  phase-4b-progressive-encoding.md  phase-4e-hierarchy-dedup.md  phase-5-bugs.md  publish-pypi-next-steps.md  publishing.md  remaining-improvements.md
docs/plans/: code-assessment.md  phase-4-zero-shot-tagging.md  phase-4cd-relevance-pruning.md  phase-5-llm-integration.md  phase-6-polish-release.md
scripts/: generate_wordnet_vocab.py
