[workspace]
resolver = "2"
members = ["crates/photon", "crates/photon-core"]

[workspace.package]
version = "0.7.9"
edition = "2021"
authors = ["Philipp Holke <@pgbouncer>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hejijunhao/photon"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Async traits (object-safe async fn in trait for Box<dyn LlmProvider>)
async-trait = "0.1"

# Random (seeded sampling for progressive encoding seed selection)
rand = "0.8"

# Utilities
directories = "5"
shellexpand = "3"
