[package]
name = "photon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Photon image processing pipeline"

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
directories.workspace = true
shellexpand.workspace = true

# Image processing (Phase 2)
image = "0.25"
kamadak-exif = "0.5"
blake3 = "1"
image_hasher = "2"
base64 = "0.22"
walkdir = "2"

# Embedding / ONNX Runtime (Phase 3)
ort = "2.0.0-rc.11"
ndarray = "0.16"

# Tagging / Text encoder (Phase 4)
tokenizers = "0.20"

# LLM integration (Phase 5)
async-trait.workspace = true
reqwest.workspace = true
futures-util.workspace = true
