[package]
name = "photon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Photon image processing pipeline"

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
directories.workspace = true
shellexpand.workspace = true

# Image processing (Phase 2)
image = "0.25"
kamadak-exif = "0.5"
blake3 = "1"
image_hasher = "2"
base64 = "0.22"
walkdir = "2"

# Embedding / ONNX Runtime (Phase 3)
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-rustls"] }
ndarray = "0.16"

# Tagging / Text encoder (Phase 4)
tokenizers = "0.20"

# Progressive encoding seed selection (Phase 4b)
rand.workspace = true

# LLM integration (Phase 5)
async-trait.workspace = true
reqwest.workspace = true
futures-util.workspace = true

# BLAS acceleration for scoring (Phase 3 speed)
# On macOS: ndarray dot() delegates to Accelerate's sgemv (~8-16x faster)
# On other platforms: ndarray uses its own optimized Rust implementation
[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
